//
// Created by caleb on 14/11/2025.
//

#ifndef Hotelaria_UnB_TP1_IAHOTEL_HPP
#define Hotelaria_UnB_TP1_IAHOTEL_HPP
#include "InterfaceServicoHotel.hpp"
#include "IO.hpp"
#include <iostream>
using namespace std;

namespace Hotelaria {
    class InterfaceApresentacaoHotel {
    public:
        virtual bool valor() = 0;

        virtual void setControladoraServicoHotel(InterfaceServicoHotel *) = 0;
    };
}

#endif //Hotelaria_UnB_TP1_IAHOTEL_HPP