@startuml
left to right direction

title Arquitetura de Módulos (Componentes) e Interfaces

skinparam ComponentStyle uml2
skinparam package {
  borderColor #303F9F
  backgroundColor #E8EAF6
}
skinparam component {
  backgroundColor #D1C4E9
  borderColor #5E35B1
}
skinparam interface {
  backgroundColor #C8E6C9
  borderColor #388E3C
}

' =================================================================
' 1. PERSISTÊNCIA (A camada mais interna, sem dependências de saída)
' =================================================================
package Persistencia <<Camada de Dados>> {
    component BD <<Banco de Dados>> as DB
    component STL <<Estruturas STL>> as DataSTL
}

' =================================================================
' 2. MÓDULOS DE SERVIÇO (Lógica de Negócio)
' Cada um expõe uma InterfaceServico e contém uma ControladoraServico
' =================================================================
package ModulosDeServico <<Camada Lógica de Serviço>> {

    component ModuloServicoAutenticavel {
        interface InterfaceServicoAutenticavel as ISA
    }
    component ModuloServicoHospede {
        interface InterfaceServicoHospede as ISH
    }
    component ModuloServicoHotel {
        interface InterfaceServicoHotel as ISHotel
    }
    component ModuloServicoReserva {
        interface InterfaceServicoReserva as ISR
    }
    component ModuloServicoQuarto {
        interface InterfaceServicoQuarto as ISQ
    }
    component ModuloServicoPessoal {
        interface InterfaceServicoPessoal as ISP
    }

    ' Dependências de Serviço para Persistência
    ModuloServicoAutenticavel ..> DB : Usa
    ModuloServicoAutenticavel ..> DataSTL : Usa

    ModuloServicoHospede ..> DB
    ModuloServicoHospede ..> DataSTL

    ModuloServicoHotel ..> DB
    ModuloServicoHotel ..> DataSTL

    ModuloServicoReserva ..> DB
    ModuloServicoReserva ..> DataSTL

    ModuloServicoQuarto ..> DB
    ModuloServicoQuarto ..> DataSTL

    ModuloServicoPessoal ..> DB
    ModuloServicoPessoal ..> DataSTL
}

' =================================================================
' 3. MÓDULOS DE APRESENTAÇÃO (Interface com o Usuário)
' Cada um expõe uma InterfaceApresentacao e usa uma InterfaceServico
' =================================================================
package ModulosDeApresentacao <<Camada de Interface com o Usuário>> {

    component ControladoraPrincipal <<Controlador Principal>> as CAI

    component ModuloApresentacaoAutenticavel {
        interface InterfaceApresentacaoAutenticavel as IAA
    }
    component ModuloApresentacaoHospede {
        interface InterfaceApresentacaoHospede as IAH
    }
    component ModuloApresentacaoHotel {
        interface InterfaceApresentacaoHotel as IAHotel
    }
    component ModuloApresentacaoReserva {
        interface InterfaceApresentacaoReserva as IAR
    }
    component ModuloApresentacaoQuarto {
        interface InterfaceApresentacaoQuarto as IAQ
    }
    component ModuloApresentacaoPessoal {
        interface InterfaceApresentacaoPessoal as IAP
    }
}

' =================================================================
' 4. DEPENDÊNCIAS ENTRE APRESENTAÇÃO E SERVIÇO
' Controladora de Apresentação (dentro do ModuloApresentacao) usa a InterfaceServico
' =================================================================

' Mapeamento Apresentação -> Serviço
ModuloApresentacaoAutenticavel ..> ISA : Depende (Autenticar)
ModuloApresentacaoHospede ..> ISH : Depende (Hóspede)
ModuloApresentacaoHotel ..> ISHotel : Depende (Hotel)
ModuloApresentacaoReserva ..> ISR : Depende (Reserva)
ModuloApresentacaoQuarto ..> ISQ : Depende (Quarto)
ModuloApresentacaoPessoal ..> ISP : Depende (Pessoal)

' =================================================================
' 5. DEPENDÊNCIAS DO CONTROLADOR PRINCIPAL
' CAI chama as interfaces de Apresentação
' =================================================================

CAI ..> IAA
CAI ..> IAH
CAI ..> IAHotel
CAI ..> IAR
CAI ..> IAQ
CAI ..> IAP

@enduml